# airwar-game

./: .gitattributes  .gitignore  CLAUDE.md  GAMEOVER_INTERFACE_TEST_REPORT.md  PROJECT_SUMMARY_PROMPT.md  README.md  REPOSITORY-SYNC-REPORT-2026-04-16.md  build_linux.sh  build_macos.sh  build_windows.bat  check_game_over_source.py  clean.sh  clear_cache_and_test.py  conftest.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.sh  test_demo.js  test_demo.py  uninstall.bat  uninstall.sh
airwar/: __init__.py  __main__.py  core_bindings.py
airwar-game/: PROJECT-ASSESSMENT-REPORT-2026-04-16.md  requirements.txt  test_docking_debug.py
airwar_core/: Cargo.toml  pyproject.toml
docs/: 2026-04-22-tutorial-ui-redesign.md  2026-04-23-mouse-interaction-refactoring-log.md  2026-05-07-install-uninstall-fix.md  AIRWAR_PROJECT_DOCUMENTATION.md  ARCHITECTURE_REVIEW_REPORT.md  CHANGELOG.md  CHECKLIST-SCENE-RENDERER-REFACTOR.md  CODE_AUDIT_2026-05-03.md  FIX_WORKFLOW_GUIDE.md  GPU加速文档.md  MAINTENANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROJECT_EVALUATION_REPORT.md  PROJECT_GUIDE.md  PROJECT_ISSUES.md  QUICK_FIX_GUIDE.md  REFACTOR-DESIGN-SCENE-RENDERER.md  REFACTORING_GUIDE.md  REMEDIATION_PLAN.md  SAVE_AND_QUIT_DESIGN.md  SPEC-SCENE-RENDERER-REFACTOR.md  TASKS-SCENE-RENDERER-REFACTOR.md  TUTORIAL_BUG_REPORT.md  ai-programming-rules.md  code_quality_audit_report.md  explosion_animation_design.md  maintenance-checklist-2026-05-10.md  nonlinear_difficulty_system_design.md  rust-performance-plan.md  tutorial-refactor-summary.md
(+408 files in other folders)
