[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airwar"
version = "0.1.0"
description = "A Python and Pygame 2D air combat game with optional Rust acceleration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1,<3",
    "pillow>=12.2.0,<13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "maturin>=1,<2",
    "pyinstaller>=6,<7",
    "ruff>=0.8,<1",
]
rust = [
    "airwar_core>=0.1.0",
]

[project.scripts]
airwar = "airwar.__main__:main"

[tool.setuptools.packages.find]
include = ["airwar*"]
exclude = ["tests*", "airwar.tests*"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
    "build",
    "dist",
    "airwar_core/target",
]

[tool.ruff.lint]
select = ["E9", "F", "B", "SIM"]
ignore = ["SIM102"]

[tool.ruff.lint.per-file-ignores]
"airwar/**/__init__.py" = ["F401"]
"airwar/config/__init__.py" = ["F401", "F403", "F405"]
"airwar/core_bindings.py" = ["F401"]
"airwar/game/systems/difficulty_strategies.py" = ["B024"]
"airwar/utils/sprites.py" = ["F401"]
